Fixed vertical scrollbar issue with slides

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -41,6 +41,7 @@ body {
     color: black;
     border-radius: 1rem;
     padding: 4rem;
+    overflow-y: auto;
   }
 
   &__header {
